[tool.poetry]
name = "py-web-server"
version = "0.1.0"
description = ""
authors = ["shubham bajaj <shmbajaj32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.33.0"
pytz = "^2024.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
